// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnavailableNotice 렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#FBF3D0",
        "borderColor": "#CFC9AE",
        "borderRadius": 14,
        "borderWidth": 1,
        "columnGap": 12,
        "flexDirection": "row",
        "padding": 16,
        "rowGap": 12,
      }
    }
    testID="unavailable-notice"
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#241208"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.75}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flexShrink": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4280553992,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.75}
      >
        <RNSVGCircle
          cx="12"
          cy="12"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          r="10"
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 16v-4"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
        <RNSVGPath
          d="M12 8h.01"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280553992,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
    >
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.235}
        style={
          {
            "color": "#241208",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 20,
          }
        }
      >
        이 기간은 조회할 수 없습니다
      </Text>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.235}
        style={
          {
            "color": "#645C42",
            "fontSize": 12,
            "lineHeight": 16,
          }
        }
        testID="unavailable-notice-description"
      >
        조회 가능한 기간(최근 14일)을 지나 확인할 수 없습니다 — 처치 기록이 없다는 뜻은 아닙니다
      </Text>
    </View>
  </View>
</View>
`;

exports[`UnavailableNotice 렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 2`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#E4E1CE",
        "borderRadius": 10,
        "marginBottom": 12,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 12,
        "paddingBottom": 10,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 10,
      }
    }
    testID="unavailable-notice"
  >
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "rowGap": 8,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.75}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flexShrink": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={1.75}
        >
          <RNSVGCircle
            cx="12"
            cy="12"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            r="10"
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.75}
          />
          <RNSVGPath
            d="M12 6v6l4 2"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.75}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.235}
        style={
          {
            "color": "#645C42",
            "fontSize": 12,
            "lineHeight": 16,
          }
        }
      >
        아직 집계되지 않았습니다
      </Text>
    </View>
  </View>
</View>
`;
